feat(aegis): Implement hybrid rate limiting with 3-tier priority system
 Features - Production-Grade Hybrid Rate Limiting:
- @RateLimit annotation for method-level limits (Priority 1 - highest)
- Database-driven rules for runtime configuration (Priority 2)
- YAML fallback for defaults (Priority 3 - lowest)
- AegisFilter servlet filter for automatic rate limiting on ALL requests
- Multi-tier client ID extraction (API key  JWT  IP address)
- Pattern matching with Ant paths (/api/**, /api/test/*)
- In-memory rule caching (60s TTL) to reduce DB queries
- HTTP 429 responses with standard headers (X-RateLimit-*)

 New Components:
- @RateLimit annotation with ClientType enum (IP, API_KEY, USER_ID, CUSTOM)
- RateLimitRuleResolver: 3-tier priority resolution logic
- ClientIdExtractor: Extract client ID from X-API-Key, Authorization (JWT), X-Forwarded-For, or remote IP
- AegisFilter: OncePerRequestFilter intercepting all HTTP requests
- RateLimitRuleEntity: JPA entity for database rules
- RateLimitRuleRepository: Spring Data JPA with pattern matching queries
- CacheConfig: In-memory caching for database rules

 Database Integration:
- PostgreSQL table: aegis.rate_limit_rules
- Indexes for fast pattern matching (endpoint_pattern, priority, enabled)
- Auto-updating timestamps trigger
- Default rules: /api/admin/** (10/min), /api/test/** (100/min), /api/public/** (1000/min)
- Runtime rule changes (no restart required)

 Technical Implementation:
- Extends OncePerRequestFilter (runs once per request)
- HandlerMethod resolution for annotation detection
- Ant path matcher for database pattern matching
- Fail-open on errors (high availability)
- Filter exclusions: /actuator/**, /static/**, /swagger-ui/**
- Proper X-Forwarded-For handling for reverse proxies

 Files Created (15 new files):
- aegis/src/main/java/com/titan/aegis/annotation/RateLimit.java
- aegis/src/main/java/com/titan/aegis/filter/AegisFilter.java
- aegis/src/main/java/com/titan/aegis/service/RateLimitRuleResolver.jav

--- a/aegis/pom.xml
+++ b/aegis/pom.xml
@@ -43,6 +43,19 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <!-- Spring Data JPA for PostgreSQL integration -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!-- PostgreSQL Driver -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Redis Client - Lettuce (with connection pooling) -->
         <dependency>
             <groupId>io.lettuce</groupId>
