--- a/aegis/src/main/resources/application.yml
+++ b/aegis/src/main/resources/application.yml
@@ -15,6 +15,29 @@ spring:
           min-idle: 2
           max-wait: 2000ms
       timeout: 2000ms
+  
+  # PostgreSQL Configuration
+  datasource:
+    url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:titan_grid}
+    username: ${POSTGRES_USER:titan_admin}
+    password: ${POSTGRES_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 2
+      connection-timeout: 20000
+  
+  # JPA Configuration
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: validate  # Use 'validate' in production, DB schema managed by init scripts
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: true
+        jdbc:
+          batch_size: 20
 
 # Server Configuration
 server:
