feat(aegis): Day 6-7 - Enhanced Observability & Production Readiness
- PostgreSQL event logging (schema, entity, repository, async logger)
- Redis Stream real-time monitoring (severity, threat scoring, consumer groups)
- Custom Prometheus metrics (10 metrics with histograms)
- AegisFilter full observability integration (timing, logging, streaming)
- Swagger/OpenAPI documentation (springdoc-openapi + SwaggerConfig)
- Analytics admin controller (6 REST endpoints)
- Multi-stage Dockerfile + docker-compose Aegis service
- K6 performance tests (baseline, spike, accuracy validation)
- Grafana dashboard (9 panels) with auto-provisioning
- PostgreSQL events table with analytics views and auto-cleanup

--- a/aegis/src/main/resources/application.yml
+++ b/aegis/src/main/resources/application.yml
@@ -93,3 +93,14 @@ logging:
   
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+# Swagger/OpenAPI Configuration
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operations-sorter: method
+    tags-sorter: alpha
+    try-it-out-enabled: true
+
