--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     networks:
       - titan-network
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER}" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
       interval: 10s
       timeout: 5s
       retries: 5
